--- a/practiceC++/practiceC++.vcxproj.filters
+++ b/practiceC++/practiceC++.vcxproj.filters
@@ -495,6 +495,12 @@
     <ClCompile Include="회의실배정.cpp">
       <Filter>소스 파일\알고리즘</Filter>
     </ClCompile>
+    <ClCompile Include="AVL.cpp">
+      <Filter>소스 파일\Tree</Filter>
+    </ClCompile>
+    <ClCompile Include="AVL_Tree.cpp">
+      <Filter>소스 파일\Tree</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyTerm.h">
